--- a/slides/2019/03-mar/index.pug
+++ b/slides/2019/03-mar/index.pug
@@ -324,6 +324,19 @@ html
         li Focus on hybrid mobile + desktop + PWA (not native)
 
     section.slide
+      h2 Storybook 5.0
+      img(src='./images/storybook-logo.png', class='corner-image', width='200px', alt='Storybook')
+      blockquote Build bulletproof UI components faster
+      p
+        a(href='https://medium.com/storybookjs/storybook-5-0-db1d0f9c83b8') Announced 
+        |  March 5
+      ul
+        li Complete overhaul of developer experience
+        li Theme-ready component library
+        li Add-on architecture / API
+        li New site with themes and improved urls
+    
+    section.slide
       h2 Ink 2.0
       blockquote React for CLIs
       p
