--- a/slides/2019/05-may/index.pug
+++ b/slides/2019/05-may/index.pug
@@ -143,46 +143,23 @@ html
           td(width='25%')
             img(src='../../shared/resources/images/safari.png', width='70%', alt='Safari')
         tr
-          td.ver 
-            span.strike.dim 74
-            br
-            strong(style='color:#1CA727') 75
+          td.ver 74
           td.ver
             span.strike.dim 66
             br
             strong(style='color:#1CA727') 67
           td.ver 18
           td.ver 12
-    
-    section.slide
-      h2 Chrome 74
-      img(src='../../shared/resources/images/chrome.png', class='corner-image', width='200px', alt='Chrome')
-      p Released March 12th —
-        a(href='https://developers.google.com/web/updates/2019/03/nic73') Release Notes
-        |  (
-        a(href='https://www.youtube.com/watch?v=ksWDVurubwE') video
-        | )
-      h3.star
-        a(href='https://developers.google.com/web/progressive-web-apps/desktop') Desktop PWAs for macOS
-      ul
-        li Websites can be installed like native apps
-        li Add a manifest, icons, and boilerplate service worker
-        li Now supported on all mobile + desktop platforms
 
     section.slide
       h2 Firefox 67
       img(src='../../shared/resources/images/firefox.png', class='corner-image', width='200px', alt='Firefox')
-      p Released March 19th —
-        a(href='https://developer.mozilla.org/en-US/Firefox/Releases/66') Release Notes
+      p Released May 14th —
+        a(href='https://developer.mozilla.org/en-US/Firefox/Releases/67') Release Notes
       h3.star 
-        a(href='https://drafts.csswg.org/css-logical/') CSS Logical Properties &amp; Values
+        a(href='#') X
       ul
-        li Layout via logical, rather than physical, direction
-        li E.g. 
-          span.code padding-block
-          |  and 
-          span.code padding-inline
-      img(src='./images/css-logical.png', alt='CSS Logical Properties', style='min-width:50%')
+        li X
     
 
     //----------------------  Libs & Frameworks  ----------------------
@@ -231,9 +208,14 @@ html
       .shim(style='background-color:#555;opacity:.7;')
 
     section.slide
-      h2 X
+      h2 Front-end Dev Handbook 2019
+      blockquote A guide that everyone can use to learn about the practice of front-end development.
       ul
-        li X
+        li Current / best-in-class tool recommendations
+        li Read 
+          a(href="https://frontendmasters.com/books/front-end-handbook/2019/#1") Chapter 0
+          |  for a 2018 recap + 2019 preview
+
     
 
     //----------------------  Something Completely Different  ----------------------
