--- a/slides/2019/05-may/index.pug
+++ b/slides/2019/05-may/index.pug
@@ -64,39 +64,34 @@ html
         | &mdash; Cullen Tsering
 
 
-    //----------------------  Sponsors  ----------------------
-
-    section.slide.cover(style='background-image:url(../../shared/resources/images/capitalfactory-bg.jpg)')
-      p(style='color: #fff;') Thanks to our venue:
-      div(style='text-align:center;padding-top:100px;font-size:200%;')
-        p
-          a(href='https://www.capitalfactory.com/')
-            img(style='min-width:40%', src='../../shared/resources/images/sponsors/capitalfactory-logo2.png', alt='Capital Factory')
-      .shim(style='background-color:#555;opacity:.5;')
-    
-    section.slide.cover(style='background:#fff;')
-      p(style='color: #555;') Thanks to our premiere sponsor:
-      div(style='text-align:center;padding-top:150px;font-size:200%;')
-        p
-          a(href='https://theguild.co/aboutus')
-            img(style='min-width:50%', src='../../shared/resources/images/sponsors/theguild-logo.png', alt='The Guild')
-
-
-    //- section.slide.cover(style='background-image:url(./images/cloudflare-stickers.jpg)')
-    //-   p(style='color: #fff;') Thanks to our sponsor:
-    
-
     //----------------------  Housekeeping  ----------------------
 
     section.slide
       h2 Housekeeping
       ul
         li Speakers and sponsors <strong>always wanted</strong> (
-          a(href='https://www.edgeatx.org') edgeatx.org
-          | )
+          a(href='https://www.edgeatx.org') edgeATX.org
+          |  for details)
         li Don't forget your parking validation
         li Omni hotel bar (downstairs) after meetup
-        li Anyone hiring / looking?
+
+
+    //----------------------  Sponsors  ----------------------
+
+    section.slide.cover(style='background-image:url(../../shared/resources/images/nascar.jpg)')
+      h1 Thanks to<br>Our Sponsors
+      .shim(style='background-color:#432c9a;opacity:.8;')
+
+    section.slide.cover(style='background-image:url(../../shared/resources/images/capitalfactory-bg.jpg)')
+      div(style='text-align:center;padding-top:100px;font-size:200%;')
+        p
+          a(href='https://www.capitalfactory.com/' alt='Capital Factory website')
+            img(style='min-width:40%', src='../../shared/resources/images/sponsors/capitalfactory-logo2.png', alt='Capital Factory')
+      .shim(style='background-color:#555;opacity:.5;')
+    
+    section.slide.cover(style='background-image:url(../../shared/resources/images/sponsors/theguild.jpg)')
+      a(href='https://theguild.co' alt='The Guild website')
+        div(style='position:absolute;top:0;left:0;width:100%;height:100%')
 
 
     //----------------------  Begin slides  ----------------------
@@ -127,7 +122,8 @@ html
           td.ver 74
           td.ver 66
           td.ver 18
-          td.ver 12
+          td.ver 12.
+            span.small 1
     
     section.slide
       h2 Browser Pop Quiz
@@ -144,23 +140,27 @@ html
             img(src='../../shared/resources/images/safari.png', width='70%', alt='Safari')
         tr
           td.ver 74
-          td.ver
-            span.strike.dim 66
-            br
-            strong(style='color:#1CA727') 67
+          td.ver 66
           td.ver 18
-          td.ver 12
+          td.ver 12.
+            span.small 1
 
-    section.slide
-      h2 Firefox 67
-      img(src='../../shared/resources/images/firefox.png', class='corner-image', width='200px', alt='Firefox')
-      p Released May 14th —
-        a(href='https://developer.mozilla.org/en-US/Firefox/Releases/67') Release Notes
-      h3.star 
-        a(href='#') X
-      ul
-        li X
+    section.slide.cover(style='background-image:url(./images/where-my-updates.jpg)')
     
+    section.slide
+      h2 Next Browser Updates
+      ul
+        li Firefox 67: 
+          a(href="https://developer.mozilla.org/en-US/docs/Mozilla/Firefox/Releases/67") May 21
+        li Chrome 75: 
+          a(href="https://www.chromestatus.com/features/schedule") June 4
+        li Edge Next: 
+          a(href="https://www.microsoftedgeinsider.com/en-us/download/") "Coming soon"
+          |  (beta available for Win 10)
+        li Safari 13: 
+          a(href="https://developer.apple.com/documentation/safari_release_notes") September? 
+          | 
+          span.small ¯\_(ツ)_/¯
 
     //----------------------  Libs & Frameworks  ----------------------
     
