--- a/slides/shared/themes/style/skew-dark.scss
+++ b/slides/shared/themes/style/skew-dark.scss
@@ -1,5 +1,3 @@
-@import "compass/css3/text-shadow";
-
 .deck-container {
   font-family: 'Helvetica Neue', sans-serif;
   font-size: 3.2em;
@@ -39,6 +37,7 @@
         letter-spacing: 1.5px;
       }
     }
+    
     blockquote {
       font-size: .9em;
       font-style: italic;
@@ -82,7 +81,7 @@
     ::-moz-selection{ background:#c00; color:#fff; }
     ::selection { background:#c00; color:#fff; }
 
-    a,  {
+    a, a:visited {
       color: #75B1F5 !important;
       border-bottom: 2px dotted #333B46;
 
@@ -129,10 +128,9 @@
       padding-right: 20px;
     }
 
-    small {
+    .small {
       font-size: 75%;
     }
-
     .strike {
       text-decoration: line-through;
     }
@@ -192,7 +190,7 @@
 
     h1 {
       color: #fff;
-      @include text-shadow(0 5px 10px rgba(0,0,0,.7));
+      text-shadow: 0 5px 10px rgba(0,0,0,.7);
       line-height: 1em;
     }
     h2 {
@@ -233,11 +231,11 @@
       color: #444;
     }
     h1, h2, h3 {
-      @include text-shadow(0 2px 0 rgba(255,255,255,.7));
+      text-shadow: 0 2px 0 rgba(255,255,255,.7);
     }
     a, a:visited, p, li {
       color: #333;
-      @include text-shadow(0 1px 0 rgba(255,255,255,.7));
+      text-shadow: 0 1px 0 rgba(255,255,255,.7);
     }
   }
 
