--- a/slides/shared/themes/style/skew.scss
+++ b/slides/shared/themes/style/skew.scss
@@ -1,5 +1,3 @@
-@import "compass/css3/text-shadow";
-
 .deck-container {
   font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size:2em;
@@ -153,7 +151,7 @@
 
     h1 {
       color: #fff;
-      @include text-shadow(0 5px 10px rgba(0,0,0,.7));
+      text-shadow: 0 5px 10px rgba(0,0,0,.7);
     }
     h2 {
       color: #fff;
@@ -196,11 +194,11 @@
       color: #444;
     }
     h1, h2, h3 {
-      @include text-shadow(0 2px 0 rgba(255,255,255,.7));
+      text-shadow: 0 2px 0 rgba(255,255,255,.7);
     }
     a, a:visited, p, li {
       color: #333;
-      @include text-shadow(0 1px 0 rgba(255,255,255,.7));
+      text-shadow: 0 1px 0 rgba(255,255,255,.7);
     }
   }
 
