--- a/slides/2019/05-may/index.pug
+++ b/slides/2019/05-may/index.pug
@@ -199,7 +199,7 @@ html
         li Hooks, TypeScript linting
 
     section.slide
-      h2 Svelte 3
+      h2 Svelte 3.0
       blockquote Cybernetically enhanced web apps
       img(src='../../shared/resources/images/svelte-logo.png', class='corner-image', width='200px', alt='Svelte')
       ul
@@ -214,7 +214,7 @@ html
           |  behind it
 
     section.slide
-      h2 Node.js 12
+      h2 Node.js 12.0
       img(src='../../shared/resources/images/nodejs-logo.png', class='corner-image', width='200px', alt='Node.js')
       ul
         li
@@ -229,6 +229,34 @@ html
         li Improved native modules, worker threads, heap management
         li A <em>lot</em> more &mdash; 
           a(href="https://medium.com/@nodejs/introducing-node-js-12-76c41a1b3f3f") check it out!
+
+    section.slide
+      h2 Electron 5.0
+      img(src='../../shared/resources/images/electron-logo.jpg', class='corner-image', width='200px', alt='Electron')
+      ul
+        li
+          a(href="https://electronjs.org/blog/electron-5-0") Released
+          |  April 23
+        li Progress toward 
+          a(href="https://github.com/electron/electron/blob/5-0-x/docs/api/promisification.md") promisifcation
+        li Multiple BrowserViews in a BrowserWindow
+        li Access to macOS system colors
+        li Includes a few minor breaking changes!
+
+    section.slide
+      h2 Babylon.js 4.0
+      blockquote Brings powerful, beautiful, simple, and open 3D to the web
+      img(src='../../shared/resources/images/babylonjs-logo.png', class='corner-image', width='200px', alt='Babylon.js')
+      ul
+        li
+          a(href="https://blogs.windows.com/buildingapps/2019/04/30/babylon-js-4-0-is-here/") Released
+          |  April 30
+        li WebGL-based graphics engine
+        li Improved physics engine (
+          a(href="https://playground.babylonjs.com/#3I55DK") cool demo
+          | )
+        li New visual scene inspector
+        li Codebased moved to ES6 modules, up to 80% smaller payloads
 
 
     //----------------------  Tips & Tricks  ----------------------
@@ -271,6 +299,8 @@ html
         li 
           a(href="https://techdows.com/2019/05/chrome-and-firefox-67-to-ship-css-prefers-color-scheme-media-feature.html") Slated
           |  for Chrome 76 &amp; Firefox 67
+        li Here's a React-specific 
+          a(href="https://www.youtube.com/watch?v=FjDo1mbkNtw") tutorial
 
     //----------------------  Security  ----------------------
     
@@ -294,15 +324,15 @@ html
     
     //----------------------  Industry Headlines  ----------------------
 
-    section.slide.cover(style='background-image:url(../../shared/resources/images/industry.jpg)')
-      .content
-        h1 Industry<br>Headlines
-      .shim(style='background-color:#393;opacity:.7;')
+    //- section.slide.cover(style='background-image:url(../../shared/resources/images/industry.jpg)')
+    //-   .content
+    //-     h1 Industry<br>Headlines
+    //-   .shim(style='background-color:#393;opacity:.7;')
 
-    section.slide
-      h2 X
-      ul
-        li X
+    //- section.slide
+    //-   h2 X
+    //-   ul
+    //-     li X
 
 
     //----------------------  ICYMI  ----------------------
